--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
-<html lang="en-US">
-<head>
-  
-  
-</head>
+<html>
 <body>
-<h2>First file</h2>  
-  
-  
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
 </body>
-</html>  
+</html>
