--- a/education.html
+++ b/education.html
@@ -16,6 +16,7 @@
 	<link href="bootstrap.min.css" rel="stylesheet">
 	<link href="slick.css" rel="stylesheet">
 	<link href="aos.css" rel="stylesheet">
+	<link href="magnific-popup.css" rel="stylesheet">
 	<link href="education.css" rel="stylesheet">
 	
 	<!-- ============== Google Fonts & Fontawesome Icons ============== -->
