--- a/telecoms.html
+++ b/telecoms.html
@@ -16,7 +16,6 @@
 	<link href="bootstrap.min.css" rel="stylesheet">
 	<link href="slick.css" rel="stylesheet">
 	<link href="aos.css" rel="stylesheet">
-	<link href="magnific-popup.css" rel="stylesheet">
 	<link href="telecoms.css" rel="stylesheet">
 	
 	<!-- ============== Google Fonts & Fontawesome Icons ============== -->
@@ -1493,7 +1492,7 @@
 	
 	<!-- ============== Javascript & Jquery Files ============== -->
 	<script src="jquery.min.js"></script>
-	<script src="loaderscript.js"></script
+	<script src="loaderscript.js"></script>
 	<script src="imagesloaded.pkgd.min.js"></script>
 	<script src="telecoms-main.js"></script>
 	<script src="bootsnav.js"></script>
