--- a/corporate.html
+++ b/corporate.html
@@ -1116,7 +1116,7 @@
 						var d = new Date();
 						var n = d.getFullYear();
 						document.getElementById("date").innerHTML = '&copy;' +n;
-					</script>&nbsp;<span>Made with love by Themewiz. All Rights Reserved</span>
+					</script>&nbsp;<span>Made with love by creativemaze. All Rights Reserved</span>
 				</p>
 				
 			</div><!-- End details -->
