--- a/insurance.html
+++ b/insurance.html
@@ -1154,8 +1154,8 @@
 		<div class="insurance_area_eleven" data-aos="fade" data-aos-delay="50">
 		
 			<h2 class="bg_head">User Login</h2>
-			<p class="bg_info">We provide a wide range of insurance products that targets your needs with the highest
-			premium payouts in the industry.</p>
+			<p class="bg_info">Please enter your login details to gain access to your account, or register if you
+			are a first time user</p>
 			
 			<div class="insurance_group_eleven">
 		
