--- a/marketing.html
+++ b/marketing.html
@@ -12,7 +12,6 @@
 	
 	<!-- ============== Style Sheet ============== -->
 	<link href="bootsnav.css" rel="stylesheet">
-	<link href="animate.css" rel="stylesheet">
 	<link href="bootstrap.min.css" rel="stylesheet">
 	<link href="slick.css" rel="stylesheet">
 	<link href="aos.css" rel="stylesheet">
@@ -25,8 +24,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,400,500,600,700,800,900" rel='stylesheet'>
 	
 </head>
-<body class="loading">
+<body>
 		
+	<div id="loading"></div><!--loading-->
+	
 	<!-- Start Navigation -->
     <nav class="navbar navbar-center navbar-mobile navbar-default bootsnav">
 
@@ -1378,9 +1379,7 @@
 	
 	<!-- ============== Javascript & Jquery Files ============== -->
 	<script src="jquery.min.js"></script>
-	<script src="loaderscript.js"></script>
 	<script src="jquery.magnific-popup.min.js"></script>
-	<script src="imagesloaded.pkgd.min.js"></script>
 	<script src="marketing-main.js"></script>
 	<script src="bootsnav.js"></script>
 	<script src="bootstrap.min.js"></script>
