--- a/conference.html
+++ b/conference.html
@@ -12,7 +12,6 @@
 	
 	<!-- ============== Style Sheet ============== -->
 	<link href="bootsnav.css" rel="stylesheet">
-	<link href="animate.css" rel="stylesheet">
 	<link href="bootstrap.min.css" rel="stylesheet">
 	<link href="slick.css" rel="stylesheet">
 	<link href="aos.css" rel="stylesheet">
@@ -26,7 +25,8 @@
 	
 </head>
 <body>
-	<div id="loading"></div>	
+	
+	<div id="loading"></div><!--loading-->	
 	
 	<!-- Start Navigation -->
     <nav class="navbar navbar-center navbar-mobile navbar-default bootsnav">
@@ -1510,7 +1510,6 @@
 	<!-- ============== Javascript & Jquery Files ============== -->
 	<script src="jquery.min.js"></script>
 	<script src="jquery.magnific-popup.min.js"></script>
-	<script src="imagesloaded.pkgd.min.js"></script>
 	<script src="conference-main.js"></script>
 	<script src="bootsnav.js"></script>
 	<script src="bootstrap.min.js"></script>
