--- a/technology.html
+++ b/technology.html
@@ -12,7 +12,6 @@
 	
 	<!-- ============== Style Sheet ============== -->
 	<link href="bootsnav.css" rel="stylesheet">
-	<link href="animate.css" rel="stylesheet">
 	<link href="bootstrap.min.css" rel="stylesheet">
 	<link href="slick.css" rel="stylesheet">
 	<link href="aos.css" rel="stylesheet">
@@ -24,7 +23,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,400,500,600,700,800,900" rel='stylesheet'>
 	
 </head>
-<body class="loading">
+<body>
 		
 	<div id="loading"></div><!--loading-->
 	
@@ -1157,13 +1156,11 @@
 	
 	<!-- ============== Javascript & Jquery Files ============== -->
 	<script src="jquery.min.js"></script>
-	<script src="imagesloaded.pkgd.min.js"></script>
 	<script src="technology-main.js"></script>
 	<script src="bootsnav.js"></script>
 	<script src="bootstrap.min.js"></script>
 	<script src="slick.min.js"></script>
 	<script src="jquery.waypoints.min.js"></script>
-    <script src="jquery.counterup.min.js"></script>
 	<script src="aos.js"></script>
 	
 </body>
