--- a/logistics.html
+++ b/logistics.html
@@ -284,7 +284,7 @@
 					
 						<span class="header-title__main">The Logistics Experts</span> 
 			
-						<span class="header-title__sub">We Deliver your cargo with efficency</span>
+						<span class="header-title__sub">We Deliver your cargo with efficiency</span>
 			
 					</h1><!--header-title-->
 					
