--- a/gym-fitness.html
+++ b/gym-fitness.html
@@ -1347,9 +1347,9 @@
 		
 		<div class="gym_area_eight" data-aos="fade" data-aos-delay="50">
 			
-			<h2 class="gym_heading">Daily News</h2>
-			<p class="gym_info">Read the latest news and highlights from around the world with the views from
-			pros in the industry.</p>
+			<h2 class="gym_heading">Fitness Blog</h2>
+			<p class="gym_info">The latest daily news updates with advice on health, fitness and diet from experts
+			around the world.</p>
 			
 			<div class="gym_group_eight">
 			
@@ -1526,7 +1526,7 @@
 			
 			<div class="gym_group_ten">
 			
-				<h2 class="bg_head">Interested ? Please fill out the form to become a gym member.</h2>
+				<h2 class="bg_head">Interested? Please fill out the form to become a gym member.</h2>
 				
 				<div class="bg_col_button">
 			
