--- a/single-project02.html
+++ b/single-project02.html
@@ -602,7 +602,7 @@
 	<script src="jquery.min.js"></script>
 	<script src="jquery.magnific-popup.min.js"></script>
 	<script src="portfolio-main.js"></script>
-	<script src="slick.js"></script>
+	<script src="slick.min.js"></script>
 	<script src="bootsnav.js"></script>
 	<script src="bootstrap.min.js"></script>
 	<script src="jquery.waypoints.min.js"></script>
