--- a/services.html
+++ b/services.html
@@ -604,7 +604,7 @@
 			
 			<div class="services_group_five">
 			
-				<h2 class="bg_head">Need our Service? Contact us for details.</h2>
+				<h2 class="bg_head">Need our services? Contact us for details.</h2>
 				
 				<span class="bg_col_button">
 						
