--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
 							<span class="word_slider">
 					
-								<span class="slide_word">Businesses</span>
+								<span class="slide_word">Industries</span>
 								<span class="slide_word">Agencies</span>
 								<span class="slide_word">Creatives</span>
 							
@@ -266,7 +266,7 @@
 	
 		<div class="home_area_one">
 		
-			<h2 class="home_head">30+ Home Demos</h2>
+			<h2 class="home_head">Home Demos</h2>
 			<p class="home_info">Each home page has been carefully crafted to modern coding standard for you to get
 			started in building your online presence.</p>
 			
