--- a/telecoms.html
+++ b/telecoms.html
@@ -1529,6 +1529,7 @@
 	
 	<!-- ============== Javascript & Jquery Files ============== -->
 	<script src="jquery.min.js"></script>
+	<script src="animatescroll.js"></script>
 	<script src="telecoms-main.js"></script>
 	<script src="bootsnav.js"></script>
 	<script src="bootstrap.min.js"></script>
