--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                                         <h6 class="title">Home I</h6>
 										<div class="content" style="display: none;">
 											<ul class="menu-col">
-												<li><a href="https://highpoint-html.netlify.app/corporate">Corporate</a></li>
-												<li><a href="https://highpoint-html.netlify.app/finance.html">Finance</a></li>
+												<li><a href="https://creativemaze.github.io/highpoint/corporate.html">Corporate</a></li>
+												<li><a href="https://creativemaze.github.io/highpoint/finance.html">Finance</a></li>
 												<li><a href="https://creativemaze.github.io/highpoint/consulting.html">Consulting</a></li>
 												<li><a href="https://creativemaze.github.io/highpoint/construction.html">Construction</a></li>
 												<li><a href="https://creativemaze.github.io/highpoint/start-up.html">Start Up</a></li>
