--- a/education.html
+++ b/education.html
@@ -632,7 +632,7 @@
 		<div class="education_area_two" data-aos="fade" data-aos-delay="50">
 		
 			<h2 class="education_heading">Age Group Focus</h2>
-			<p class="education_info">Each of our age groups is engage with the relevant material to foster
+			<p class="education_info">Each of our age group is engage with the relevant material to foster
 			their growth and development</p>
 			
 			<div class="education_group_two">
