--- a/freelancer-html.html
+++ b/freelancer-html.html
@@ -284,7 +284,7 @@
 						<span class="buttoncol">
 						
 							<a href="https://highpoint-html.netlify.app/portfolio-no-space-2-col-grid-filter-html" class="left_btn">View Portfolio</a>
-							<a href="https://highpoint-html.netlify.app/about-us-02-html">About Me</a>
+							<a href="https://highpoint-html.netlify.app/about-us-02-html" class="right_btn">About Me</a>
 						
 						</span><!--buttoncol-->
 			
