--- a/freelancer.html
+++ b/freelancer.html
@@ -284,7 +284,7 @@
 						<span class="buttoncol">
 						
 							<a href="#" class="left_btn">View Portfolio</a>
-							<a href="#">About Me</a>
+							<a href="#" class="right_btn">About Me</a>
 						
 						</span><!--buttoncol-->
 			
