--- a/consulting-html.html
+++ b/consulting-html.html
@@ -290,7 +290,7 @@
 						<span class="buttoncol">
 						
 							<a href="https://highpoint-html.netlify.app/services-html">Learn More</a>
-							<a href="https://highpoint-html.netlify.app/contact-us-html" class="right_btn">Contact</a>
+							<a href="https://highpoint-html.netlify.app/contact-us-html" id="right_btn">Contact</a>
 						
 						</span><!--buttoncol-->
 			
