--- a/about-us-02.html
+++ b/about-us-02.html
@@ -865,7 +865,7 @@
 			<span class="box_button">
 						
 				<a href="#">Join our Team</a>
-				<a href="#" class="right_btn">Team Members</a>
+				<a href="#" id="right_btn">Team Members</a>
 						
 			</span><!--box_button-->
 			
