--- a/restaurant-html.html
+++ b/restaurant-html.html
@@ -617,7 +617,7 @@
 		
 		<div class="restaurant_area_two" data-aos="fade" data-aos-delay="50">
 			
-			<p class="sub_info">Our Beverage we Offer</p>
+			<p class="sub_info">Our Beverage Offers</p>
 			<h2 class="restaurant_heading">Beverage & Cocktail</h2>
 			
 			<div class="restaurant_group_two">
