--- a/consulting.html
+++ b/consulting.html
@@ -87,8 +87,8 @@
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-menu" aria-expanded="false">
 					<i class="fa fa-bars"></i>
 				</button>
-				<!--<a href="https://upstake-html.netlify.app/landing-page">Upstake</a>-->
-				<div id="nav-logo"><a href="https://upstake-html.netlify.app/landing-page"><img src="white-logo.png" alt=""></a></div>
+				<!--<a href="https://creativemaze.github.io/upstake/">Upstake</a>-->
+				<div id="nav-logo"><a href="https://creativemaze.github.io/upstake/"><img src="white-logo.png" alt=""></a></div>
 			</div>
 			<!-- End Header Navigation -->
 
@@ -306,7 +306,7 @@
 	
 	<main class="page_area">
 	
-		<div class="consult_area_one" data-aos="fade" data-aos-delay="50">
+		<div class="consult_area_one">
 	
 			<div class="consult_group_one">
 			
