--- a/digital-media.html
+++ b/digital-media.html
@@ -740,7 +740,7 @@
 		<div class="digital_area_two" data-aos="fade" data-aos-delay="50">
 		
 			<h5 class="sub_head">Premium Service</h5>
-			<h2 class="bg_head">Quality services delivery with premium content</h2>
+			<h2 class="digital_heading">Quality services delivery with premium content</h2>
 		
 			<div class="digital_group_two">
 			
