--- a/law-firm-html.html
+++ b/law-firm-html.html
@@ -314,7 +314,7 @@
 	
 	<main class="page_area">
 	
-		<div class="law_area_one" data-aos="fade" data-aos-delay="50">
+		<div class="law_area_one">
 		
 			<div class="law_group_one">
 			
