--- a/law-firm.html
+++ b/law-firm.html
@@ -568,7 +568,7 @@
 								<li>Criminal Law</li>
 								<li>Intellectual Property</li>
 								<li>Commercial Transaction</li>
-								<li>Properties</li>
+								<li>Real Estate</li>
 				
 							</ul>
 						
