--- a/corporate.html
+++ b/corporate.html
@@ -327,8 +327,8 @@
 		
 		<div class="slidenav">
 				
-			<div class="prev_nav">&#8592;</div><!--prev_nav-->
-			<div class="next_nav">&#8594;</div><!--next_nav-->
+			<span class="prev_nav"><i class="fi fi-ts-arrow-left"></i></span><!--prev_nav-->
+			<span class="next_nav"><i class="fi fi-ts-arrow-right"></i></span><!--next_nav-->
 					
 		</div><!--slidenav-->
 		
