--- a/finance-html.html
+++ b/finance-html.html
@@ -492,9 +492,9 @@
 		
 		</div><!--finance_area_two-->
 		
-		<div class="finance_area_three" data-aos="fade" data-aos-delay="50" style="background-image: url('pexels-sora-shimazaki-5673488.jpg');">
+		<div class="finance_area_three" data-aos="fade" data-aos-delay="50">
 			
-			<h2 class="bg_head front_index">Financial Services Delivery with Timely Execution</h2>
+			<h2 class="finance_head">Financial Services Delivery with Timely Execution</h2>
 			
 			<div class="finance_group_three">
 			
