--- a/construction-html.html
+++ b/construction-html.html
@@ -823,7 +823,7 @@
 		
 			<div class="construct_group_five">
 			
-				<h2 class="bg_head">Hear from our clients Testimonials</h2>
+				<h2 class="bg_head">Hear from our clients testimonials</h2>
 				
 				<span class="quote_format">&#10077;</span>
 				
