--- a/consulting-html.html
+++ b/consulting-html.html
@@ -833,7 +833,7 @@
 				<div class="blog_head">
 				
 					<h5 class="blog_sub">News Center</h5>
-					<h2 class="blog_heading">The Latest News Articles</h2>
+					<h2 class="blog_heading">The latest news articles</h2>
 					<p>Our major news featuring previews, reviews and updates from consultancy services
 					provided to our global clients.</p>
 				
