--- a/corporate-html.html
+++ b/corporate-html.html
@@ -405,7 +405,7 @@
 		<div class="corporate_area_two" data-aos="fade" data-aos-delay="50" style="background-image: url('linkedin-sales-solutions-nISqmehpBQk-unsplash.jpg');">
 		
 			<h5 class="corporate_center front_index">What We Do</h5>
-			<h2 class="bg_head front_index">We offer cutting edge business services</h2>
+			<h2 class="bg_head front_index">We Offer Cutting Edge Business Services</h2>
 			
 			<div class="corporate_group_two">
 			
