--- a/interior-design.html
+++ b/interior-design.html
@@ -369,7 +369,7 @@
 			<h5 class="sub_info">Our Services</h5>
 			<div class="sub_crumb"></div>
 			
-			<h2 class="interior_head">Quality Services  Delivery for every Project</h2>
+			<h2 class="interior_head">Quality Services  Delivery for Every Project</h2>
 			
 			<div class="interior_group_two">
 			
