--- a/scientific-research.html
+++ b/scientific-research.html
@@ -921,7 +921,7 @@
 		
 		<div class="research_area_nine" data-aos="fade" data-aos-delay="50">
 			
-			<h2 class="research_heading">The Latest Articles</h2>
+			<h2 class="research_heading">The latest articles</h2>
 			<p class="research_info">Our research are presented in a day to day journal with the latest news and updates
 			related to the topics that you care about.</p>
 			
