--- a/education.html
+++ b/education.html
@@ -294,7 +294,7 @@
 	
 	<main class="page_area">
 	
-		<div class="education_area_one" data-aos="fade" data-aos-delay="50">
+		<div class="education_area_one">
 		
 			<div class="education_group_one area_slider">
 			
