--- a/insurance.html
+++ b/insurance.html
@@ -276,7 +276,7 @@
 			
 			<div class="header__content">
 				
-				<h1 class="header-title"><span class="header-title__main">Insurance Coverage for the whole Family</span> 
+				<h1 class="header-title"><span class="header-title__main">Insurance Coverage for the Whole Family</span> 
 					<span class="header-title__sub">Our wide range of insurance products are the best in our industry
 					with a product for everyone.</span>
 			
