--- a/architecture-html.html
+++ b/architecture-html.html
@@ -283,7 +283,7 @@
 					<span class="header-title__sub">Our designs incorporates both style and functionality with timely
 					and detailed execution.</span>
 			
-					<a id="play-video" class="video-play-button"  href="https://www.youtube.com/watch?v=7e90gBu4pas"><span></span></a>
+					<a id="play-video" class="video-play-button"  href="https://www.youtube.com"><span></span></a>
 				
 					<span class="buttoncol">
 						
