--- a/insurance-html.html
+++ b/insurance-html.html
@@ -860,7 +860,7 @@
 			
 				<h2 class="bg_head">The best rates to get you and your family protected</h2>
 				
-				<a id="play-video" class="video-play-button"  href="https://www.youtube.com/watch?v=7e90gBu4pas"><span></span></a>
+				<a id="play-video" class="video-play-button"  href="https://www.youtube.com/watch?v=u80Ey6lSRyE"><span></span></a>
 			
 			</div><!--insurance_group_six-->
 		
