--- a/travel-html.html
+++ b/travel-html.html
@@ -912,7 +912,7 @@
 					<p>View the travel and vacation highlights capturing the day to day moments 
 					of our trip to one of the most beautiful locations.</p>
 				
-					<a id="play-video" class="video-play-button" href="https://www.youtube.com/watch?v=7e90gBu4pas"><span></span></a>
+					<a id="play-video" class="video-play-button" href="https://www.youtube.com/watch?v=u80Ey6lSRyE"><span></span></a>
 				
 				</div><!--area_content-->
 			
