--- a/about-us-03-html.html
+++ b/about-us-03-html.html
@@ -715,7 +715,7 @@
 			
 				<h2 class="bg_head">Effective strategies undertaken to drive our growth</h2>
 				
-				<a id="play-video" class="video-play-button"  href="https://www.youtube.com/watch?v=7e90gBu4pas"><span></span></a>
+				<a id="play-video" class="video-play-button" href="https://www.youtube.com/watch?v=u80Ey6lSRyE"><span></span></a>
 			
 			</div><!--about_group_six-->
 			
