--- a/gym-fitness-html.html
+++ b/gym-fitness-html.html
@@ -807,7 +807,7 @@
 			
 			<div class="bg_area">
 			
-				<a id="play-video" class="video-play-button" href="https://www.youtube.com/watch?v=7e90gBu4pas"><span></span></a>
+				<a id="play-video" class="video-play-button" href="https://www.youtube.com/watch?v=u80Ey6lSRyE"><span></span></a>
 				
 				<div class="area_content">
 			
